--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ftdi": "github:mmckegg/node-ftdi",
     "ndarray": "^1.0.18",
     "pixels-canvas": "^1.0.2",
+    "worker-timer": "^1.0.0",
     "ws": "^1.0.1"
   },
   "devDependencies": {}
