--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ftdi": "github:mmckegg/node-ftdi",
     "ndarray": "^1.0.18",
     "pixels-canvas": "^1.0.2",
+    "require-rebuild": "^1.2.8",
     "worker-timer": "^1.0.0",
     "ws": "^1.0.1"
   },
