--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron main.js",
+    "rebuild": "npm rebuild --runtime=electron --target=1.4.3 --abi=50 --disturl=https://atom.io/download/atom-shell"
   },
   "repository": {
     "type": "git",
@@ -14,19 +15,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@mmckegg/mutant": "^1.0.0",
+    "@mmckegg/mutant": "^3.6.1",
     "bindings": "^1.2.1",
     "browserify": "^13.0.0",
     "cwise": "^1.0.9",
-    "electron-prebuilt": "^0.36.12",
-    "ftdi": "github:mmckegg/node-ftdi",
+    "electron": "^1.4.3",
+    "ftdi": "github:thomaschaaf/node-ftdi",
     "ndarray": "^1.0.18",
     "pixels-canvas": "^1.0.2",
-    "require-rebuild": "^1.2.8",
     "worker-timer": "^1.0.0",
     "ws": "^1.0.1"
-  },
-  "devDependencies": {
-    "electron-rebuild": "^1.2.0"
   }
 }
